# rust_tetris

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
src/: main.rs
src/game/: block.rs  color.rs  game.rs  mod.rs  score.rs  state.rs
src/settings/: color.rs  mod.rs  settings.rs
