[package]
name = "rust_tetris"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
sdl2 = "0.34"


# SET PATH=%PATH%;E:\vcpkg\installed\x64-windows\bin
# SET INCLUDE=%INCLUDE%;E:\vcpkg\installed\x64-windows\include
# SET LIB=%LIB%;E:\vcpkg\installed\x64-windows\lib